fix: hero heading text alignment

--- a/src/SCSS/Component/Template/Articles/_Hero.scss
+++ b/src/SCSS/Component/Template/Articles/_Hero.scss
@@ -18,6 +18,8 @@
   font-weight: 600;
   font-size: 52px;
   line-height: 1.15;
+  text-align: left;
+
   color: #{Colour.get(primary)};
 
   a {
